# ai-keeper

./: .gitignore  BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_contact.yml
.github/workflows/: ci.yml  pages.yml  public-release-gate.yml  release.yml
docs/: github-ops-status.md  index.html  private-markers.md  public-release-checklist.md  public-release-gate.md  release-upload-design.md  release-verification.md  repo-settings-checklist.md  robots.txt  sitemap.xml  styles.css  user-guide.md
packaging/: README.md  manifest.json
packaging/macos/: README.md
packaging/windows/: README.md  install-service.ps1
scripts/: generate-changelog.py  install-git-hooks.sh  install.sh  package.sh  public-release-gate.sh  publish-homebrew-tap.sh  publish.sh  release.sh  rollback.sh  sign-release.sh  update-version.py  upgrade.sh
skills/ai-keeper/: SKILL.md
src/aikeeper/: __init__.py  (+27 more)
tests/: test_audit_health.py  test_backlog_features.py  test_ci_workflow.py  test_claude_ingest.py  test_cli_installer.py  test_codex_ingest.py  test_diagnostics.py  test_distribution.py  test_distribution_wave.py  test_git_hooks_install.py  test_hook.py  test_issue_templates.py  test_launchd_service.py  test_marketing_site.py  test_outcomes.py  test_packaging_scripts.py  test_pricing.py  test_private_markers.py  test_public_release_gate.py  test_release_ops_wave.py  test_release_workflow_scripts.py  test_system_jobs.py  test_version.py  test_web.py
(+14 files in other folders)
