[project]
name = "aikeeper"
version = "0.28.0"
description = "Local Codex and Claude token usage daemon and dashboard."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "rich>=13.9.0",
    "typer>=0.12.0",
    "uvicorn[standard]>=0.30.0",
    "watchfiles>=0.24.0",
]

[project.scripts]
aikeeper = "aikeeper.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aikeeper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
